# cso_poc

./: .gitignore  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.orchestrator  README.md  docker-compose.yml  pyproject.toml  results.md  security_results.json  security_summary.md
.claude/: settings.local.json
cso_poc/: adversarial.py  dashboard.py  db.py  execution_guards.py  injection_detection.py  mcp_server.py  memory.py  mesh.py  mesh_agents.py  model_config.py  orchestrator.py  output_sanitizer.py  reasoning.py  scenarios.py  schemas.py  scorecard.py  security_benchmark.py
db/: init.sql
tests/: conftest.py  test_mesh.py  test_scenarios.py  test_security.py
