[project]
name = "cso-poc"
version = "0.1.0"
description = "Cognitive Singularity Orchestrator — Proof of Concept"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "uvicorn>=0.27",
    "fastapi>=0.115",
    "streamlit>=1.40",
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
